# xora

./: .gitignore  CMakeLists.txt  README.md
include/: miniaudio.h
include/glad/: glad.c  glad.h
scripts/: run.py  sd_utils.py
src/: main.cpp
src/engine/: app.hpp  engine.cpp  engine.hpp  module.cpp  module.hpp
src/game/: box.cpp  box.hpp  camera.cpp  camera.hpp  game.cpp  game.hpp  globals.cpp  globals.hpp  input_handler.hpp
src/graphics/: graphics.cpp  graphics.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/input/: vaxis.cpp  vaxis.hpp  vaxis2d.cpp  vaxis2d.hpp  vbutton.cpp  vbutton.hpp  vinput.cpp  vinput.hpp
src/physics/: physics.cpp  physics.hpp
src/utils/: fs.cpp  fs.hpp  path.cpp  path.hpp  store.hpp  time.cpp
src/vm/: vm.cpp  vm.hpp  vm_engine.cpp  vm_engine.hpp  vm_graphics.cpp  vm_graphics.hpp  vm_input.cpp  vm_input.hpp  vm_math.cpp  vm_math.hpp  vm_physics.cpp  vm_physics.hpp  vm_system.cpp  vm_system.hpp  vm_window.cpp  vm_window.hpp
src/xo_math/: xo_math.cpp  xo_math.hpp
